# etl-crypto-pipeline

./: .gitignore  Dockerfile  cmd  config.yml  docker-compose.yml  pyproject.toml
scripts/: __init__.py  clickhouse_handler.py  config_handler.py  environment.py  kafka_handler.py  schema.py  spark_handler.py  websocket_handler.py
services/clickhouse/: Dockerfile
services/kafka/: Dockerfile
